--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chuck-norris-api": "^1.0.6",
     "node-xmpp-client": "^3.0.0",
+    "pluralize": "^1.2.1",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
